SMall addition to ourpage content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello MoinatCoursera</title>
 </head>
 <body>
-<h1>Hello moinatcoursera </h1>
+<h1>Hello moinatcoursera! Hey its me again </h1>
 </body>
 </html>
